<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorActivityBackground">

    <include layout="@layout/actionbar_main"/>

    <com.scnu.zhou.signer.widget.edit.TextClearableEditText
        android:id="@+id/et_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/regist_phone_title"
        app:hint="@string/login_user_hint"
        app:lineColor="@color/colorTheme"
        app:singleline="true"
        app:clearDrawable="@drawable/icon_clear"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="25dp">

    </com.scnu.zhou.signer.widget.edit.TextClearableEditText>

    <Button
        android:id="@+id/btn_next"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@drawable/btn_login_selector"
        android:layout_marginLeft="26dp"
        android:layout_marginRight="26dp"
        android:layout_marginTop="35dp"
        android:text="@string/regist_next_step"
        android:textSize="16sp"
        android:textColor="#fff"
        android:enabled="false"
        style="?android:attr/borderlessButtonStyle"/>

</LinearLayout>