<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    android:gravity="center_horizontal">

    <include layout="@layout/actionbar_main"/>
    
    <ImageView
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:src="@drawable/icon_sign_success"
        android:layout_marginTop="80dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_success_title"
        android:textColor="#333"
        android:textSize="18sp"
        android:layout_marginTop="20dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_success_text"
        android:textColor="#666"
        android:textSize="15sp"
        android:layout_marginTop="15dp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_success_distance"
            android:textColor="#666"
            android:textSize="15sp"/>

        <TextView
            android:id="@+id/tv_distance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0 m"
            android:textColor="@color/colorTheme"
            android:textSize="15sp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_success_battery"
            android:textColor="#666"
            android:textSize="15sp"/>

        <TextView
            android:id="@+id/tv_battery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0 %"
            android:textColor="@color/colorTheme"
            android:textSize="15sp"/>

    </LinearLayout>

</LinearLayout>