<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorActivityBackground">

    <include layout="@layout/actionbar_main"/>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="25dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="10dp">

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#333"
                android:textSize="15sp"
                android:layout_marginLeft="6dp"
                android:text="@string/regist_code_title"/>

            <EditText
                android:id="@+id/et_smscode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="65dp"
                android:textSize="15sp"
                android:layout_toRightOf="@+id/tv_title"
                android:hint="@string/regist_code_hint"/>

            <TextView
                android:id="@+id/tv_resend"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/regist_code_resend"
                android:layout_alignParentRight="true"
                android:textSize="15sp"
                android:textColor="@color/colorTheme" />

        </RelativeLayout>

        <View
            android:id="@+id/v_line"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorTheme"/>

    </LinearLayout>

    <Button
        android:id="@+id/btn_next"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@drawable/btn_login_selector"
        android:layout_marginLeft="26dp"
        android:layout_marginRight="26dp"
        android:layout_marginTop="35dp"
        android:text="@string/regist_next_step"
        android:textSize="16sp"
        android:textColor="#fff"
        android:enabled="false"
        style="?android:attr/borderlessButtonStyle"/>

</LinearLayout>