<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorActivityBackground">

    <!--navigation bar-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="#fff">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:gravity="center_horizontal"
                android:textColor="@color/colorTitleText"
                android:textSize="18sp"
                android:text="@string/tab_mine"/>

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#ddd"/>

    </LinearLayout>
    <!--navigation bar end-->

    <RelativeLayout
        android:id="@+id/rl_profile"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:background="@drawable/bg_icontitle_cell"
        android:layout_marginTop="16dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <com.scnu.zhou.signer.ui.widget.image.CircleImageView
            android:id="@+id/civ_user_header"
            android:layout_width="54dp"
            android:layout_height="54dp"
            android:src="@drawable/default_header_male"
            app:border_color="#ffffff"
            app:border_width="0dp"
            android:layout_centerVertical="true"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="16dp"
            android:layout_toRightOf="@+id/civ_user_header"
            android:layout_centerVertical="true">

            <TextView
                android:id="@+id/tv_user_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#333"
                android:textSize="16sp"/>

            <TextView
                android:id="@+id/tv_user_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#999"
                android:textSize="12sp"
                android:text="ID:15602006208"
                android:layout_marginTop="6dp"/>

        </LinearLayout>

        <View
            android:layout_width="8dp"
            android:layout_height="13dp"
            android:background="@mipmap/icon_indicator"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"/>

    </RelativeLayout>

    <com.scnu.zhou.signer.ui.widget.cell.IconTitleCell
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:text="@string/mine_cell01_title"
        app:icon="@mipmap/icon_table_sign"
        app:isdivider="true"
        android:layout_marginTop="16dp">

    </com.scnu.zhou.signer.ui.widget.cell.IconTitleCell>

    <com.scnu.zhou.signer.ui.widget.cell.IconTitleCell
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:text="@string/mine_cell02_title"
        app:icon="@mipmap/icon_table_speak"
        app:isdivider="true">

    </com.scnu.zhou.signer.ui.widget.cell.IconTitleCell>

    <com.scnu.zhou.signer.ui.widget.cell.IconTitleCell
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:text="@string/mine_cell03_title"
        app:icon="@mipmap/icon_table_circle"
        app:isdivider="false">

    </com.scnu.zhou.signer.ui.widget.cell.IconTitleCell>

    <com.scnu.zhou.signer.ui.widget.cell.IconTitleCell
        android:id="@+id/tc_settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:text="@string/mine_cell04_title"
        app:icon="@mipmap/icon_table_settings"
        app:isdivider="false"
        android:layout_marginTop="16dp">

    </com.scnu.zhou.signer.ui.widget.cell.IconTitleCell>

</LinearLayout>