<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="#fff">

    <View
        android:id="@+id/v_bottomline"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#ddd"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/ll_home"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center">
            
            <ImageView
                android:id="@+id/iv_home"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/icon_home_selector"/>

            <TextView
                android:id="@+id/tv_home"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab_home"
                android:textSize="12sp"
                android:textColor="#bbb"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_discover"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center">

            <ImageView
                android:id="@+id/iv_discover"
                android:layout_width="26dp"
                android:layout_height="26dp"
                android:src="@drawable/icon_discover_selector"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="2dp"/>

            <TextView
                android:id="@+id/tv_discover"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab_discover"
                android:textSize="12sp"
                android:textColor="#bbb"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center">

            <Button
                android:id="@+id/btn_sign"
                android:layout_width="56dp"
                android:layout_height="38dp"
                android:background="@drawable/btn_sign_selector"
                style="?android:attr/borderlessButtonStyle"/>

        </LinearLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <LinearLayout
                android:id="@+id/ll_notice"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:gravity="center">

                <ImageView
                    android:id="@+id/iv_notice"
                    android:layout_width="26dp"
                    android:layout_height="26dp"
                    android:src="@drawable/icon_notice_selector"
                    android:layout_marginTop="2dp"
                    android:layout_marginBottom="2dp"/>

                <TextView
                    android:id="@+id/tv_notice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tab_notice"
                    android:textSize="12sp"
                    android:textColor="#bbb"/>

            </LinearLayout>

            <TextView
                android:id="@+id/tv_tab_warning"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:background="@drawable/bg_point_warning"
                android:text="0"
                android:textSize="12sp"
                android:textColor="#fff"
                android:gravity="center"
                android:layout_alignParentRight="true"
                android:layout_marginRight="15dp"
                android:layout_marginTop="2dp"
                android:visibility="gone"/>

        </RelativeLayout>

        <LinearLayout
            android:id="@+id/ll_mine"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center">

            <ImageView
                android:id="@+id/iv_mine"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/icon_mine_selector"/>

            <TextView
                android:id="@+id/tv_mine"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab_mine"
                android:textSize="12sp"
                android:textColor="#bbb"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>